force-app/main/default/objects/Promotional_Scheme__c/Promotional_Scheme__c.object-meta.xml
<CustomObject>
    <label>Promotional Scheme</label>
    <nameField>
        <displayFormat>AMCOUPON-{00000}</displayFormat>
        <label>Promotional Scheme Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotional Schemes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>