force-app/main/default/objects/Promotional_Scheme__c/fields/Valid_From__c.field-meta.xml
<CustomField>
    <fullName>Valid_From__c</fullName>
    <formula>Coupon__r.VALID_FROM__c</formula>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>