force-app/main/default/objects/Promotional_Scheme__c/fields/Valid_UpTo__c.field-meta.xml
<CustomField>
    <fullName>Valid_UpTo__c</fullName>
    <formula>Coupon__r.VALID_TO__c</formula>
    <label>Valid UpTo</label>
    <type>Date</type>
</CustomField>